--- a/.github/workflows/bump-version.yaml
+++ b/.github/workflows/bump-version.yaml
@@ -1,15 +1,14 @@
-name: Bump RUBY SDK version
+name: Bump Ruby SDK version
 on: [workflow_dispatch]
     
 jobs:
-  
   bump-version:
     runs-on: ubuntu-latest
     env:
       GIT_OPENAPI_REPO_ID: openapi-fattureincloud
       GIT_USER_ID: fattureincloud
-    steps: 
 
+    steps: 
       - id: checkout-openapi
         name: Checkout OpenAPI repo
         env:
@@ -20,17 +19,20 @@ jobs:
           ref: master
           repository: ${{ env.GIT_OPENAPI_REPO_PATH }}
           token: ${{ secrets.FATTUREINCLOUD_BOT_TOKEN }}
+
       - id: setup-libraries
         name: Install libraries
         run: |
           sudo add-apt-repository ppa:rmescandon/yq -y
           sudo apt update
           sudo apt install yq -y
+
       - id: read-openapi-version
         name: Read OpenAPI Version
         run: |
           OPENAPI_VERSION=$(yq e '.info.version' ./openapi/openapi.yaml)
           echo "openapi_version=$OPENAPI_VERSION" >> $GITHUB_ENV
+
       # We trigger the SDK generation from OpenAPI repo to bump version also in the generated code
       - id: trigger-event
         name: Trigger Event
