--- a/.github/workflows/release-version.yaml
+++ b/.github/workflows/release-version.yaml
@@ -72,8 +72,7 @@ jobs:
             github.git.createRef({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              ref: "refs/tags/v${{ env.sdk_version }}",
-              sha: context.sha
+              ref: "refs/tags/v${{ env.sdk_version }}"
             })
 
       - id: publish
