--- a/.github/workflows/release-version.yaml
+++ b/.github/workflows/release-version.yaml
@@ -62,6 +62,12 @@ jobs:
         run: |
           git push origin
 
+      - id: save-commit-sha
+        name: Save latest commit sha
+        run: |
+          COMMIT_SHA=$(git rev-parse HEAD)
+          echo "commit_sha=$COMMIT_SHA" >> $GITHUB_ENV
+
       - id: create-tag
         name: Create tag
         if: ${{ !env.ACT }}
@@ -72,7 +78,8 @@ jobs:
             github.git.createRef({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              ref: "refs/tags/v${{ env.sdk_version }}"
+              ref: "refs/tags/v${{ env.sdk_version }}",
+              sha: "${{ env.commit_sha }}"
             })
 
       - id: publish
