--- a/.github/workflows/release-version.yaml
+++ b/.github/workflows/release-version.yaml
@@ -5,12 +5,13 @@ jobs:
   release-version:
     runs-on: ubuntu-latest
     name: Release sdk
-    env:
-      GEM_HOST_API_KEY: ${{ secrets.FATTUREINCLOUD_RUBYGEMS_API_KEY }}
+    permissions:
+      contents: write
+      id-token: write
     steps:
       - id: checkout
         name: Checkout repo
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
         with:
           token: ${{ secrets.FATTUREINCLOUD_BOT_TOKEN }}
 
@@ -22,12 +23,13 @@ jobs:
 
       - id: setup-node
         name: Setup Node.js
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v6
 
       - id: setup-ruby
         name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
+          bundler-cache: true
           ruby-version: 3.1.0
 
       - id: setup-libraries
@@ -71,7 +73,7 @@ jobs:
       - id: create-tag
         name: Create tag
         if: ${{ !env.ACT }}
-        uses: actions/github-script@v7
+        uses: actions/github-script@v8
         with:
           github-token: ${{ github.token }}
           script: |
@@ -82,9 +84,13 @@ jobs:
               sha: "${{ env.commit_sha }}"
             })
 
-      - id: publish
-        name: Push to rubygems.org
-        if: ${{ !env.ACT }}
-        run: |
-          gem build *.gemspec
-          gem push *.gem
+      # - id: publish
+      #   name: Push to rubygems.org
+      #   if: ${{ !env.ACT }}
+      #   run: |
+      #     gem build *.gemspec
+      #     gem push *.gem
+
+      - uses: rubygems/release-gem@v1
+        with:
+          gem-push-key: rubygems # Usa trusted publisher OIDC
